--- a/docs/icons/icon-usage.mdx
+++ b/docs/icons/icon-usage.mdx
@@ -10,7 +10,7 @@ description: "Icons are graphical representations of terms, functions or objects
 ---
 
 import IconTable from '@site/src/components/IconTable';
-import { IconExamplesClarity, IconExamplesStatus } from '@site/src/components/IconTable';
+import { IconExamplesClarity, IconExamplesStatus, IconExamplesMenu } from '@site/src/components/IconTable';
 
 #
 
@@ -23,6 +23,28 @@ import { IconExamplesClarity, IconExamplesStatus } from '@site/src/components/I
 Examples
 
 <IconTable data={IconExamplesClarity}></IconTable>
+
+## Menu icons
+
+We use distinct icons to signal different types of menus:
+
+<IconTable data={IconExamplesMenu}></IconTable>
+
+The <a href={`/docs/icons/icon-library#drag-gripper`}>drag-gripper icon</a> is visually similar but isn't a menu icon and should be used for drag-and-drop interactions to reorder items.
+
+### Example of menu icons
+
+The illustration demonstrates the standard layout, featuring the apps icon in the [application header](../components/application-header/guide.md) and an open context menu for an event list item.
+
+![Menu icons](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7420-16011&t=HOxEXsgRcyJFe982-4)
+
+Upon resizing to a smaller screen, the [layout adapts](../components/application-header/guide#behavior):
+- The left navigation collapses into a menu icon in the application header.
+- The app switch icon then relocates into the expandable menu.
+- Actions previously visible in the application header move into a dropdown, indicated by the more menu icon.
+
+![Menu icons small screens](https://www.figma.com/design/wEptRgAezDU1z80Cn3eZ0o/iX-Documentation-illustrations?node-id=7428-36686&t=HOxEXsgRcyJFe982-4)
+
 
 ## Status icons
 
